base/apps/pocket-id/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  namespace: default
  labels:
    app.kubernetes.io/name: pocket-id
    app.kubernetes.io/instance: pocket-id
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pocket-id
    app.kubernetes.io/instance: pocket-id
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
